<resources>

    <string name="app_name">Trilce UCV</string>
    <string name="action_settings">Configuración</string>
    <string name="datos_basicos">Datos Basicos</string>
    <string name="mis_asignaturas">Mis Asignaturas</string>
    <string name="asignaturas_matriculadas">Asignaturas Matriculadas</string>
    <string name="boleta_de_notas">Boleta de notas</string>
    <string name="configuraci_n">Configuración</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="informacion_personal">Información Personal</string>
    <string name="color_rojo">Rojo</string>
    <string name="color_azul">Azul</string>
    <string name="color_verde">Verde</string>
    <string name="color_naranja">Naranja</string>
    <string name="color_rosado">Rosado</string>
    <string name="color_violeta">Violeta</string>
    <string name="color_marron">Marron</string>
    <string name="color_azul_gris">Azul gris</string>
    <string name="color_azul_oscuro">Azul oscuro</string>
    <string name="color_azul_claro">Azul claro</string>
    <string name="color_actual">Color Actual</string>
    <string name="color_listo">Listo</string>
    <string name="seleccione_un_dise_o">Seleccione un diseño</string>
    <string name="buscar">Buscar</string>
    <string name="horario">Horario</string>
    <string name="descarga_completa">Descarga Completa</string>
    <string name="falta_descargar_el_archivo">Falta descargar el archivo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="inasistencias_permitidas">Inasistencias permitidas</string>
    <string name="estado">Estado</string>
    <string name="justificar">Justificar</string>
    <string name="cancelar">Cancelar</string>
    <string name="descargar">Descargar</string>
    <string name="ver_mas_detalles">Ver mas detalles</string>
    <string name="dezlisate_hacia_la_derecha_para_poder_buscar_a_tus_amigos_y_chatear_con_ellos">Dezlisate hacia la derecha para poder buscar a tus amigos y chatear con ellos</string>
    <string name="no_tienes_ninguna_solicitud_pendiente">No tienes ninguna solicitud pendiente.</string>
    <string name="no_tienes_ninguna_notificaci_n">No tienes ninguna notificación</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_cerrar_sesi_n">No Cerrar Sesión</string>
    <string name="ingresar">INGRESAR</string>
    <string name="usuario">Usuario</string>
    <string name="usted_se_ha_logueado_correctamente">Usted se ha logueado correctamente</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="negro">Negro</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="red_social">Red Social</string>
    <string name="enviar_anuncio">Enviar Anuncio</string>
    <string name="amigos">Amigos</string>
    <string name="configurar_cuenta">Configurar Cuenta</string>
    <string name="estilo_de_tablas">Estilo de tablas</string>
    <string name="cambia_los_colores">Cambia los colores de la aplicación</string>
    <string name="seleccione_el_estilo">Seleccione el estilo de las tablas</string>
    <string name="user">Usuario</string>
    <string name="configuracion_general">Configuracion General</string>
    <string name="diseño_de_la_app">Diseño de la App</string>
    <string name="puedes_cambiar_los_colores">Puedes cambiar los colores de la Aplicación en Configuración</string>
    <string name="Podras_cambiar_el_diseño">Podras cambiar el diseño de las tablas en Configuración</string>
    <string name="Puedes_buscar_a_compañeros_de_otras_escuelas">Puedes buscar a compañeros de otras escuelas y chatear con ellos</string>
    <string name="cambia_tu_foto_de_perfil">Cambia tu foto de perfil a tu gusto</string>
    <string name="podras_acceder_a_la_aplicacion">Podras acceder a la aplicacion en cualquier momento sin INTERNET</string>
    <string name="mod_offline_activado">Modo Offline Activado</string>
    <string name="ocurrio_un_error">Ocurrio un Error</string>
    <string name="necesita_estar_conectado_a_internet">Necesita estar conectado a internet</string>
    <string name="carpetas_creadas_correctamente">Carpetas creadas Correctamente</string>
    <string name="contraseña_vacia">Contraseña Vacia</string>
    <string name="usuario_invalido">Usuario inválido</string>
    <string name="usuario_vacio">Usuario Vacio</string>
    <string name="el_usuario_no_existe">El usuario no existe</string>
    <string name="contraseña_incorrecta">Contraseña Incorrecta</string>
    <string name="no_tiene_conexion_a_internet">No tiene conexion a internet</string>
    <string name="error_al_agregar_el_titulo">Error al agregar titulo</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galeria</string>
    <string name="elija_una_opcion">Elija una opción</string>
    <string name="selecciona_una_imagen">Selecciona una imagen</string>
    <string name="permisos_aceptados">Permisos aceptados</string>
    <string name="permisos_denegados">Permisos denegados</string>
    <string name="para_usar_las_funciones">Para usar las funciones de la app necesitas aceptar los permisos</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Los_permisos_son_necesarios_para_usar_la_aplicacion">Los permisos son necesarios para poder usar la aplicación</string>
    <string name="semana">"Semana "</string>
    <string name="aula">Aula: %s</string>
    <string name="domingo">Domingo</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="datos_actualizados_correctamente">Datos actualizados correctamente</string>
    <string name="error_al_actualizar_datos">Error al actualizar datos</string>
    <string name="parcial">Parcial</string>
    <string name="nota">Nota</string>
    <string name="examen_parcial">"Examen Parcial(EP) "</string>
    <string name="promedio">Promedio</string>
    <string name="promedio_final_redondeado">Promedio Final Redondeado</string>
    <string name="promedio_final_en_decimales">Promedio Final en decimales</string>
    <string name="formula">Formula</string>
    <string name="esta_apunto_de_eliminar_a">"Esta apunto de eliminar a "</string>
    <string name="de_tu_lista_de_amigos_estas_seguro">" de tu lista de Amigos ¿Estas Seguro?"</string>
    <string name="eliminando">Eliminando...</string>
    <string name="chat">Chat</string>
    <string name="buscar_title">Buscar</string>
    <string name="solicitud_pendiente">Solicitud Pendiente</string>
    <string name="cancelar_solicitud">Cancelar Solicitud</string>
    <string name="no_puedes_chatear_con_esta_persona">No puedes chatear con esta persona hasta que sean amigos, Por favor espere hasta que reciba una respuesta de su solicitud de amistad</string>
    <string name="estas_seguro_de_cancelar_la_solicitud">¿Estas seguro de cancelar la solicitud?</string>
    <string name="cancelando_solicitud">Cancelando Solicitud...</string>
    <string name="quiere_ser_tu_amigo">" Quiere ser tu amigo."</string>
    <string name="No_puedes_chatear_con_esta_persona_hasta_que_sean_amigos">No puedes chatear con esta persona hasta que sean amigos, por favor acepta la solicitud de amistad para poder chatear con esa persona</string>
    <string name="añadiendo_a_tu_lista_de_amigos">Añadiendo a tu lista de amigos...</string>
    <string name="no_son_amigos">No son amigos</string>
    <string name="agregar_a_amigos">Agregar a Amigos</string>
    <string name="no_puedes_chatear_con_esa_persona_madar_solicitud_de_amistad">No puedes chatear con esta persona hasta que sean amigos, Por favor mandale una solicitud de amistad.</string>
    <string name="enviando_solicitud_de_amistad">Enviando Solicitud de Amistad...</string>
    <string name="siguiente_clase">Siguiente clase:</string>
    <string name="girar">Girar</string>
    <string name="cerrar">Cerrar</string>


</resources>
