<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/configuracion_general"
        android:key="key_tabla_title">
        <EditTextPreference
            android:selectable="false"
            android:enabled="true"
            android:title="@string/user"
            android:clickable="false"
            android:linksClickable="false"
            android:summary="kfelix"
            android:textColor="#000000"
            android:key="op_user" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/diseño_de_la_app"
        android:key="title_diseño_app">
        <ListPreference
            android:key="key_tabla"
            android:title="@string/estilo_de_tablas"
            android:summary="@string/seleccione_el_estilo"
            />
        <Preference
            android:title="Theme App"
            android:summary="@string/cambia_los_colores"
            android:key="key_theme"
            />
    </PreferenceCategory>
</PreferenceScreen>