<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:weightSum="1">

    <TextView
        android:id="@+id/textViewThemeDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/seleccione_un_dise_o"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text" />

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:padding="15sp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_viewMuestra"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="?attr/colorPrimary"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp">

            <TextView
                android:id="@+id/textViewMuestra"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/color_actual"
                android:textColor="@color/md_text_white" />
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <ScrollView
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:clipToPadding="true"
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/relativeLayoutCardViewsUCV"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_viewUCV"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <ImageView
                        android:id="@+id/textViewUCV"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="UCV"
                        android:src="@drawable/logo_ucv" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_viewBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_black_1000_75"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textViewBlack"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Negro"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/relativeLayoutCardViews"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view1"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_red_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_rojo"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_azul"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view3"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_green_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_verde"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_orange_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_naranja"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view5"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_pink_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_rosado"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_indigo_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_violeta"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view7"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_brown_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_marron"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_blue_grey_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_azul_gris"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view9"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_falcon_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_azul_oscuro"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="24dp"
                    android:clickable="true"
                    android:foreground="?selectableItemBackground"
                    card_view:cardBackgroundColor="@color/md_light_blue_400"
                    card_view:cardCornerRadius="2dp"
                    card_view:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="80dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/color_azul_claro"
                        android:textColor="@color/md_text_white" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:background="@color/md_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonAgree"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/dialog_button"
            android:clickable="true"
            android:paddingRight="16dp"
            android:text="@string/color_listo"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />
    </LinearLayout>
</LinearLayout>
